# python-omfiles

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  codec_benchmark.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  zarr_pfor_test.py
.github/: dependabot.yml
.github/actions/build-wheel/: action.yml
.github/actions/build_wheels/: action.yml
.github/actions/cache-rust-build/: action.yml
.github/actions/download-wheels/: action.yml
.github/actions/install-python-deps/: action.yml
.github/actions/install-uv/: action.yml
.github/actions/run-cargo-tests/: action.yml
.github/actions/run-python-tests/: action.yml
.github/actions/rust_tests/: action.yaml
.github/actions/test/: action.yml
.github/actions/test-wheel/: action.yml
.github/actions/upload-wheels/: action.yml
.github/workflows/: build-test.yml  ci-pr.yml  deploy_docs.yml  lint.yml  release-please.yml
api/: index.html
api/reader/: index.html
api/readerasync/: index.html
api/types/: index.html
api/variable/: index.html
api/writer/: index.html
api/xarray/: index.html
benchmarks/helpers/io/: readers.py  writers.py
docs/: api.md  api.rst  conf.py  index.md  index.rst
docs/api/: reader.md  readerasync.md  types.md  variable.md  writer.md  xarray.md
examples/: dask_larger_than_ram.py  databricks_pyspark.py  gaussian_regrid.py  latlonplot.py  plot_map.py  readme_example.py  regrid_ecmwf_ifs_hres_gaussian_O1280_to_0.1_degree.py  regrid_subset_of_projected_domain.py  select_by_coordinates.py  spatial_xarray.py  wkt2_crs.py  xarray_data_run.py  xarray_spatial.py
notebooks/: fetch_from_S3.ipynb  hierarchical_example.ipynb  multidim_example.ipynb
python/omfiles/: __init__.py  __init__.pyi  _chunk_utils.py  _numcodecs.py  _utils.py  _zarr3.py  async_fsspec_wrapper.py  chunk_reader.py  dask.py  grids.py  meta.py  numcodecs.py  om_domains.py  om_grid.py  om_meta.py  omfiles.pyi  omfiles_numcodecs.py  omfiles_zarr_codecs.py  pyspark.py  types.py  utils.py  xarray.py  xarray_backend.py  zarr3.py
python/omfiles/_rust/: __init__.pyi
python/omfiles/grids/: gaussian.py  om_grid.py  regular.py
search/: search_index.json
src/: array_index.rs  codecs.rs  compression.rs  cpu_info.rs  data_type.rs  fsspec_backend.rs  hierarchy.rs  lib.rs  reader.rs  reader_async.rs  test_utils.rs  typed_array.rs  writer.rs
src/grids/: gaussian.rs  grid.rs  regrid.rs  regular.rs
tests/: conftest.py  fixtures.py  test_chunk_reader.py  test_codecs.py  test_dask.py  test_fsspec.py  test_grids.py  test_meta.py  test_om_domains.py  test_omfilesrspy.py  test_pyspark.py  test_read_write.py  test_streaming_write.py  test_utils.py  test_xarray.py
