[package]
name = "python-omfiles"
version = "1.1.2"
edition = "2021"
description = "Python bindings for the rust omfiles library"
license = "GPL-2.0-only"
repository = "https://github.com/open-meteo/python-omfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfiles"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = true

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py310", "experimental-async"] }
pyo3-async-runtimes = { version = "0.27", features = ["async-std-runtime"] }
pyo3-stub-gen = "0.18"
async-lock = "3.4.2"
numpy = "0.27"
num-traits = "0.2"
delegate = "0.13"
omfiles-rs = { git = "https://github.com/open-meteo/rust-omfiles", rev = "f9d139d9dfe4aeb5b25afc01aff0b0abcedc9644", package = "omfiles", features = ["metadata-tree"] }
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "7e688eca60ce9600d9111647d3e4ed9bb3c6e8f1" }
thiserror = "2.0.18"

[features]
