[package]
name = "python-omfiles"
version = "1.1.2"
edition = "2021"
description = "Python bindings for the rust omfiles library"
license = "GPL-2.0-only"
repository = "https://github.com/open-meteo/python-omfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfiles"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = true

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py310", "experimental-async"] }
pyo3-async-runtimes = { version = "0.28", features = ["async-std-runtime"] }
pyo3-stub-gen = "0.19"
async-lock = "3.4"
numpy = "0.28"
num-traits = "0.2"
delegate = "0.13"
omfiles-rs = { git = "https://github.com/open-meteo/rust-omfiles", rev = "4954f78dcba4b2451cd31110859dcf715da4e09f", package = "omfiles", features = ["metadata-tree"] }
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "e42baa2edeb8e77e32540c7134edc77b3975a5bb" }
thiserror = "2.0"

[features]
