[package]
name = "python-omfiles"
version = "1.1.2"
edition = "2021"
description = "Python bindings for the rust omfiles library"
license = "GPL-2.0-only"
repository = "https://github.com/open-meteo/python-omfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfiles"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = true

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py310", "experimental-async"] }
pyo3-async-runtimes = { version = "0.28", features = ["async-std-runtime"] }
pyo3-stub-gen = "0.22"
async-lock = "3.4"
numpy = "0.28"
num-traits = "0.2"
delegate = "0.13"
omfiles-rs = { git = "https://github.com/open-meteo/rust-omfiles", rev = "cd6f08c097931100943b3677b6eaeac0b37327ee", package = "omfiles", features = ["metadata-tree"] }
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "18bee8578d953bd95ad7de1ae688faa7cf421f7c" }
thiserror = "2.0"

[features]
