[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omfiles"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
codec = [
    "zarr>=2.18.2",
    "numcodecs>=0.12.1",
]
xarray = ["xarray>=2023.1.0"]
fsspec = ["fsspec>=2023.1.0", "s3fs>=2023.1.0"]
all = [
    "zarr>=2.18.2",
    "numcodecs>=0.12.1",
    "xarray>=2023.1.0",
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0"
    ]

[dependency-groups]
documentation = [
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
dev = [
    "pytest>=6.1",
    "pytest-asyncio",
    "psutil",
    "maturin>=1.7,<2.0",
    {include-group = "documentation"},
    "omfiles[all]",
]

[tool.maturin]
python-source = "python"             # Python source code is in the `python` directory
bindings = "pyo3"                    # pyo3 bindings is actually the default for maturin
features = ["pyo3/extension-module"] # Define extension module in pyproject.toml instead of Cargo.toml to not mess with `cargo test`

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
unfixable = ["F401"]
# Add import sorting rules (I-prefixed rules)
extend-select = ["I"]
select = ["D"] # Enable all docstring-related rules
ignore = [
    "D200",
    "D203",
    "D204",
    "D212",
    "D413"
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore all docstring errors in tests/

[project.entry-points."xarray.backends"]
om = "omfiles.xarray:OmXarrayEntrypoint"

[project.entry-points."zarr.codecs"]
"omfiles.pfor" = "omfiles.zarr3:PforCodec"
"omfiles.pfor_serializer" = "omfiles.zarr3:PforSerializer"
